@@ -615,7 +615,7 @@ class IndexerBase
             'sortdate' => $fileIndexerObject->fileInfo->getModificationTime(),
             'orig_uid' => $orig_uid,
             'orig_pid' => 0,
-            'directory' => $fileIndexerObject->fileInfo->getRelativePath(),
+            'directory' => $fileIndexerObject->fileInfo->getPath(),
             'hash' => $fileIndexerObject->getUniqueHashForFile()
         ];
 
