@@ -1,6 +1,9 @@
 ChangeLog
 
 Upcoming version
+[!!!]     For files indexed by the non-FAL-indexer the absolute path is now stored in the index instead of the relative path.
+[!!!]     The file modification date is not part of the hash for indexed files anymore. That means all files have to be re-indexed after updating the extension. Please start the full indexing.
+[FEATURE] Add incremental indexing for files. https://github.com/tpwd/ke_search/issues/64
 [TASK]    Use dependency injection in commands. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/72
 [TASK]    Use "extension configuration" over "extension manager configuration". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/69
 [TASK]    Streamline wording of "FlexForm". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/70/
